test/fail/IllegalParameter.ma
-- 2013-04-05

data D (F : Set -> Set)
{ c : D (\ A -> A) }
